--- a/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
+++ b/16-Emailing-with-Python/Excercise and Notes/01-Overview-of-Received-Emails.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:DarkCyan'> Overview of Received Emails. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "    Now that we understand how to send emails progammatically with Python, let's explore how we can read and search recieved emails. To do we will use the built-in [imaplib library](https://docs.python.org/3/library/imaplib.html#imap4-example). We will also use the built in [email](https://docs.python.org/3/library/email.examples.html) library for parsing through the recieved emails."
    ]
@@ -17,17 +21,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
-    "### <span style='color:MediumTurquoise'> imaplib. </span>"
+    "### <span style='color:MediumTurquoise'> imaplib and email libraries </span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -37,9 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -49,9 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -63,7 +65,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -73,19 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "hidden": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter your password: ········\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Remember , you may need an app password if you are a gmail user\n",
     "# \n",
@@ -96,7 +89,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -106,59 +98,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "hidden": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('OK',\n",
-       " [b'(\\\\HasNoChildren) \"/\" \"INBOX\"',\n",
-       "  b'(\\\\HasNoChildren) \"/\" \"Personal\"',\n",
-       "  b'(\\\\HasNoChildren) \"/\" \"Receipts\"',\n",
-       "  b'(\\\\HasNoChildren) \"/\" \"Sent\"',\n",
-       "  b'(\\\\HasNoChildren) \"/\" \"Trash\"',\n",
-       "  b'(\\\\HasNoChildren) \"/\" \"Travel\"',\n",
-       "  b'(\\\\HasNoChildren) \"/\" \"Work\"',\n",
-       "  b'(\\\\HasChildren \\\\Noselect) \"/\" \"[Gmail]\"',\n",
-       "  b'(\\\\All \\\\HasNoChildren) \"/\" \"[Gmail]/All Mail\"',\n",
-       "  b'(\\\\Drafts \\\\HasNoChildren) \"/\" \"[Gmail]/Drafts\"',\n",
-       "  b'(\\\\HasNoChildren \\\\Important) \"/\" \"[Gmail]/Important\"',\n",
-       "  b'(\\\\HasNoChildren \\\\Sent) \"/\" \"[Gmail]/Sent Mail\"',\n",
-       "  b'(\\\\HasNoChildren \\\\Junk) \"/\" \"[Gmail]/Spam\"',\n",
-       "  b'(\\\\Flagged \\\\HasNoChildren) \"/\" \"[Gmail]/Starred\"',\n",
-       "  b'(\\\\HasNoChildren \\\\Trash) \"/\" \"[Gmail]/Trash\"'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "M.list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "hidden": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('OK', [b'28297'])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Connect to your inbox\n",
     "M.select(\"inbox\")"
@@ -167,10 +122,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
-    "### <span style='color:LightSeaGreen'> Searching Mail. </span>"
+    "### <span style='color:MediumTurquoise'> Searching Mail. </span>"
    ]
   },
   {
@@ -297,9 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -327,7 +282,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -352,50 +306,38 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### <span style='color:LightSeaGreen'> Connect to your inbox. </span>"
+    "### <span style='color:MediumTurquoise'> Connect to your inbox. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "    import imaplib\n",
-    "\n",
     "    mailobj = imaplib.IMAP4_SSL('imap.gmail.com')\n",
-    "\n",
     "    import getpass\n",
-    "\n",
     "    email = getpass.getpass(\"Email: \")\n",
-    "\n",
-    "\n",
     "    #Need to use app password\n",
     "    password = getpass.getpass('Password: ')\n",
-    "\n",
     "    mailobj.login(email,password)\n",
-    "\n",
     "    #should get message \n",
-    "    #\" ('OK', [b'pkazeez@gmail.com authenticated (Success)'])\"\n",
-    "\n"
+    "    #\" ('OK', [b'pkazeez@gmail.com authenticated (Success)'])\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('OK', [b'28299'])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
    "source": [
     "# Connect to your inbox\n",
     "M.select(\"inbox\")"
@@ -403,16 +345,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Let's now search and confirm if it is there:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -422,7 +366,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "source": [
     "We can now save what it has returned:"
@@ -430,56 +375,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'OK'"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
    "source": [
     "typ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[b'28298']"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
    "source": [
     "data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The data will be a list of unique ids."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -489,9 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -500,9 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -511,9 +440,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -522,16 +451,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "We can use the built in email library to help parse this raw string."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -540,9 +471,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -551,17 +482,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'This is a test to see if the python search worked.\\r\\n'\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
    "source": [
     "for part in email_message.walk():\n",
     "    if part.get_content_type() == \"text/plain\":\n",
@@ -571,7 +496,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Excellent! We've successfully have been able to check our email's inbox , filter by some condition, and read the body of the text that was there. This will come in handy in the near future!"
    ]
@@ -579,7 +506,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -592,28 +557,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import imaplib\n",
-    "\n",
-    "mailobj = imaplib.IMAP4_SSL('imap.gmail.com')\n",
-    "\n",
+    "M = imaplib.IMAP4_SSL('imap.gmail.com')\n",
     "import getpass\n",
-    "\n",
     "email = getpass.getpass(\"Email: \")\n",
-    "\n",
-    "\n",
     "#Need to use app password\n",
-    "password = getpass.getpass('Password: ')\n",
-    "\n",
-    "mailobj.login(email,password)\n",
+    "password = getpass.getpass('Password: ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M.login(email,password)\n",
     "\n",
     "### should get message \n",
-    "#\" ('OK', [b'pkazeez@gmail.com authenticated (Success)'])\"\n",
-    "\n"
+    "#\" ('OK', [b'pkazeez@gmail.com authenticated (Success)'])\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M.list()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M.select('INBOX')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M.search(None,'SUBJECT \"Security alert\"')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "typ, data = M.search(None,'SUBJECT \"Security alert\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emails = str(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newlist = emails.split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(newlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_id = newlist[2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result, email_data = M.fetch(email_id, '(RFC822)'   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_email = email_data[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_email_string = raw_email.decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import email"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "email_message = email.message_from_string(raw_email_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
