--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "given-nudist",
-   "metadata": {},
+   "id": "imported-patch",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
    ]
@@ -11,30 +13,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recovered-latest",
-   "metadata": {},
+   "id": "proved-frontier",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "polar-strand",
-   "metadata": {},
-   "source": [
-    "# <span style='color:teal'> Simple Color heading teal. </span>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "roman-clone",
-   "metadata": {},
    "source": [
     "    # <span style='color:DarkCyan'> Simple Color heading DarkCyan. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "marked-portfolio",
+   "id": "equivalent-production",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:MediumTurquoise'> Simple Color heading MediumTurquoise. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "universal-maine",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:MediumTurquoise'> Simple Color heading . </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "minute-garage",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:teal'> Simple Color heading teal. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "wrong-consumption",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:teal'> Simple Color heading . </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "wanted-happiness",
    "metadata": {},
    "source": [
     "# <span style='color:MediumTurquoise'> Simple Color heading MediumTurquoise. </span>"
@@ -42,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "biblical-sport",
+   "id": "minus-dragon",
    "metadata": {},
    "source": [
     "    # <span style='color:MediumTurquoise'> Simple Color heading . </span>"
@@ -50,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impaired-homework",
+   "id": "military-imagination",
    "metadata": {
     "heading_collapsed": true
    },
@@ -61,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "experimental-entity",
+   "id": "political-motorcycle",
    "metadata": {
     "hidden": true
    },
@@ -70,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proud-authentication",
+   "id": "preceding-camera",
    "metadata": {
     "heading_collapsed": true
    },
@@ -80,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nominated-harvard",
+   "id": "bottom-bearing",
    "metadata": {
     "hidden": true
    },
@@ -91,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spatial-scholarship",
+   "id": "systematic-citizenship",
    "metadata": {
     "hidden": true
    },
@@ -109,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "revolutionary-luxury",
+   "id": "suburban-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": []
