--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -486,6 +486,18 @@
     "hidden": true
    },
    "source": [
+    "    * 1\n",
+    "    * 2\n",
+    "    * 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "municipal-worker",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "* 1\n",
     "* 2\n",
     "* 3"
@@ -520,6 +532,38 @@
    "source": [
     "# This is a test heading. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sealed-watershed",
+   "metadata": {},
+   "source": [
+    "# Linking to another website - Simple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "familiar-python",
+   "metadata": {},
+   "source": [
+    "    [hexadecimal](https://en.wikipedia.org/wiki/Hexadecimal) format:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "current-meter",
+   "metadata": {},
+   "source": [
+    "[hexadecimal](https://en.wikipedia.org/wiki/Hexadecimal) format:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "complex-transparency",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
