--- a/17-Advanced Python Objects and Data Structures/Excercise And Notes/01-Advanced Numbers.ipynb
+++ b/17-Advanced Python Objects and Data Structures/Excercise And Notes/01-Advanced Numbers.ipynb
@@ -17,8 +17,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "heading_collapsed": true
+    "collapsed": true
    },
    "source": [
     "## <span style='color:MediumTurquoise'> Advanced Numbers . </span>\n",
@@ -30,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
